--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
         android:layout_marginTop="426dp"
         android:layout_marginEnd="166dp"
         android:layout_marginBottom="257dp"
-        android:text="Submit"
+        android:text="@string/submit_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
